--- a/style.scss
+++ b/style.scss
@@ -315,6 +315,15 @@ html {
             top: 25%;
           }
 
+          @media screen and (min-width: 376px) {
+            .girl {
+              width: 65%;
+              height: 65%;
+              left: 29%;
+              top: 22%;
+            }
+          }
+
           .overflow {
             position: absolute;
             overflow: hidden;
